# Babel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  Makefile.win  build.bat  build.sh  conanfile.py  conanfile.txt  unix_build.sh
Documentation/: Protocol  lol  mdr
Documentation/code_documentation/: Doxyfile
Documentation/code_documentation/html/: _a_babel_page_8cpp.html  _a_babel_page_8cpp__incl.map  _a_babel_page_8cpp__incl.md5  _a_babel_page_8cpp_source.html  _a_babel_page_8hpp.html  _a_babel_page_8hpp__dep__incl.map  _a_babel_page_8hpp__dep__incl.md5  _a_babel_page_8hpp__incl.map  _a_babel_page_8hpp__incl.md5  _a_babel_page_8hpp_source.html  _a_command_8cpp.html  _a_command_8cpp__incl.map  _a_command_8cpp__incl.md5  _a_command_8cpp_source.html  _a_command_8hpp.html  _a_command_8hpp__dep__incl.map  _a_command_8hpp__dep__incl.md5  _a_command_8hpp__incl.map  _a_command_8hpp__incl.md5  _a_command_8hpp_source.html  _a_tcp_socket_8cpp.html  _a_tcp_socket_8cpp__incl.map  _a_tcp_socket_8cpp__incl.md5  _a_tcp_socket_8cpp_source.html  _a_tcp_socket_8hpp.html  _a_tcp_socket_8hpp__dep__incl.map  _a_tcp_socket_8hpp__dep__incl.md5  _a_tcp_socket_8hpp__incl.map  _a_tcp_socket_8hpp__incl.md5  _a_tcp_socket_8hpp_source.html  _audio_encoder_8cpp.html  _audio_encoder_8cpp__incl.map  _audio_encoder_8cpp__incl.md5  _audio_encoder_8cpp_source.html  _audio_encoder_8hpp.html  _audio_encoder_8hpp__dep__incl.map  _audio_encoder_8hpp__dep__incl.md5  _audio_encoder_8hpp__incl.map  _audio_encoder_8hpp__incl.md5  _audio_encoder_8hpp_source.html  (+1254 more)
Documentation/code_documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+45 more)
Documentation/code_documentation/latex/: _a_babel_page_8cpp.tex  _a_babel_page_8cpp__incl.md5  _a_babel_page_8hpp.tex  _a_babel_page_8hpp__dep__incl.md5  _a_babel_page_8hpp__incl.md5  _a_command_8cpp.tex  _a_command_8cpp__incl.md5  _a_command_8hpp.tex  _a_command_8hpp__dep__incl.md5  _a_command_8hpp__incl.md5  _a_tcp_socket_8cpp.tex  _a_tcp_socket_8cpp__incl.md5  _a_tcp_socket_8hpp.tex  _a_tcp_socket_8hpp__dep__incl.md5  _a_tcp_socket_8hpp__incl.md5  _audio_encoder_8cpp.tex  _audio_encoder_8cpp__incl.md5  _audio_encoder_8hpp.tex  _audio_encoder_8hpp__dep__incl.md5  _audio_encoder_8hpp__incl.md5  _audio_manager_8cpp.tex  _audio_manager_8cpp__incl.md5  _audio_manager_8hpp.tex  _audio_manager_8hpp__dep__incl.md5  _audio_manager_8hpp__incl.md5  _babel_8cpp.tex  _babel_8cpp__incl.md5  _babel_8hpp.tex  _babel_8hpp__dep__incl.md5  _babel_8hpp__incl.md5  _boost_tcp_socket_8cpp.tex  _boost_tcp_socket_8cpp__incl.md5  _boost_tcp_socket_8hpp.tex  _boost_tcp_socket_8hpp__dep__incl.md5  _boost_tcp_socket_8hpp__incl.md5  _button_8cpp.tex  _button_8cpp__incl.md5  _button_8hpp.tex  _button_8hpp__dep__incl.md5  _button_8hpp__incl.md5  (+526 more)
src/: main.c
src/client/: Babel.cpp  Babel.hpp  ClientInfo.cpp  ClientInfo.hpp  ClientInfos.cpp  ClientInfos.hpp  CommandHandler.cpp  CommandHandler.hpp  MainClient.cpp  main_client.cpp
src/client/Components/: Button.cpp  Button.hpp
src/client/components/: Button.cpp  Button.hpp  CButton.hpp  Image.cpp  Image.hpp  Input.hpp  Size.cpp  Size.hpp  WidgetManager.cpp  WidgetManager.hpp
src/client/gui/: MainWindow.cpp  MainWindow.hpp
src/client/gui/components/: Button.cpp  Button.hpp  CButton.cpp  CButton.hpp  Chat.cpp  Chat.hpp  GroupBox.cpp  GroupBox.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Label.cpp  Label.hpp  ListWidget.cpp  ListWidget.hpp  Style.cpp  Style.hpp  StyleManager.cpp  StyleManager.hpp  TConversation.cpp  TConversation.hpp  TMicro.cpp  TMicro.hpp  Thread.cpp  Thread.hpp  WidgetManager.hpp
src/client/gui/pages/: ABabelPage.cpp  ABabelPage.hpp  CallController.cpp  CallController.hpp  CallPage.cpp  CallPage.hpp  ConnectionPage.cpp  ConnectionPage.hpp  EchoSoundTestServicePage.cpp  EchoSoundTestServicePage.hpp  (+5 more)
src/client/network/: QtTcpSocket.cpp  QtTcpSocket.hpp  soundPacket.hpp
src/client/sound/: AudioEncoder.cpp  AudioEncoder.hpp  AudioManager.cpp  AudioManager.hpp
src/client/windows/: Window.cpp  Window.hpp
src/common/: AudioManager.cpp  AudioManager.hpp  ConnectionInfo.cpp  ConnectionInfo.hpp  ConnectionInfos.cpp  ConnectionInfos.hpp  User.cpp  User.hpp
src/common/command/: ACommand.cpp  ACommand.hpp  CommandAddContact.cpp  CommandAddContact.hpp  CommandCall.cpp  CommandCall.hpp  CommandCallAnswer.cpp  CommandCallAnswer.hpp  CommandCallEnd.cpp  CommandCallEnd.hpp  CommandContact.cpp  CommandContact.hpp  CommandDelete.cpp  CommandDelete.hpp  CommandError.cpp  CommandError.hpp  CommandFactory.cpp  CommandFactory.hpp  CommandLogin.cpp  CommandLogin.hpp  CommandLoginOk.cpp  CommandLoginOk.hpp  CommandLogout.cpp  CommandLogout.hpp  CommandMessage.cpp  CommandMessage.hpp  CommandName.hpp  CommandOk.cpp  CommandOk.hpp  CommandPing.cpp  CommandPing.hpp  CommandPong.cpp  CommandPong.hpp  CommandUser.cpp  CommandUser.hpp  CommandUserState.cpp  CommandUserState.hpp
src/common/exception/: CommandException.cpp  CommandException.hpp  Exception.cpp  Exception.hpp  TcpSocketException.cpp  TcpSocketException.hpp
src/common/network/: ATcpSocket.cpp  ATcpSocket.hpp  BoostTcpSocket.cpp  BoostTcpSocket.hpp  ConnectionInfo.cpp  ConnectionInfo.hpp  DataPacket.cpp  DataPacket.hpp  ITcpSocket.h  IUdpSocket.h  QtTcpSocket.cpp  QtTcpSocket.hpp
src/server/: CommandHandler.cpp  MainServer.cpp  Server.cpp  Server.hpp  ServerCommandHandler.cpp  ServerCommandHandler.hpp  SqliteServer.cpp  SqliteServer.hpp  database.db  main_server.cpp
src/server/exception/: TcpServerException.cpp  TcpServerException.hpp
src/server/network/: BoostTcpSocket.cpp  BoostTcpSocket.hpp  TcpServer.cpp  TcpServer.hpp
